# cs184-final

./: CMakeLists.txt
CGL/include/CGL/: matrix3x3.h
docs/: index.html  proposal.html
docs/milestone/: index.html
docs/proposal/: index.html
docs/writeup/: index.html
scene/: bowl.ele  bowl.face  bowl.json  bowl.node  glass_pane.ele  glass_pane.face  glass_pane.json  glass_pane.node  glass_tetra.1.ele  glass_tetra.1.face  glass_tetra.1.node  small_bowl.edge  small_bowl.ele  small_bowl.json  small_bowl.node  teapot.1.ele  teapot.1.face  teapot.1.node  teapot.json
src/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.h  brittleObject.cpp  brittleObject.h  brittleObjectMesh.cpp  brittleObjectMesh.h  constraint.h  main.cpp  object.cpp  object.h  objectMesh.cpp  objectMesh.h  pointMass.h  shatterSimulator.cpp  shatterSimulator.h
src/collision/: collisionObject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
